<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.dragonsairlines.ui.FlightsViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.FlightsActivity">

        <LinearLayout
            android:id="@+id/view_search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:hint="from"
                android:maxLines="1"
                android:id="@+id/et_from_price"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                tools:text="5"/>

            <EditText
                android:hint="to"
                android:maxLines="1"
                android:id="@+id/et_to_price"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                tools:text="100"/>
            <TextView
                android:id="@+id/tv_selected_currency"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                tools:text="EUR"/>

            <Button
                android:id="@+id/btn_search_flights"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Search"
                android:layout_gravity="end" />
        </LinearLayout>


            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view_search_bar"
            tools:text="Flights not found" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/flights_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_search_bar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>