...

        <TextView
            android:id="@+id/outcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="true"
            android:layout_above="@id/income"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            tools:text="Montevideo"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/price"
            app:layout_constraintStart_toStartOf="parent"
...
